<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/size30dp"
            android:layout_marginBottom="@dimen/size20dp"
            android:text="CREATE YOUR EVENT"
            android:fontFamily="@font/proximanovaregular"
            android:textStyle="bold"
            android:textSize="@dimen/text30sp"
            />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Event Type"
                android:fontFamily="@font/proximanovaregular"
                android:textStyle="bold"
                android:textSize="@dimen/text15sp"
                />
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:hint="Select your event">

                <AutoCompleteTextView
                    android:id="@+id/txtEventType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size15dp"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Event Place"
                android:layout_marginTop="@dimen/size20dp"
                android:fontFamily="@font/proximanovaregular"
                android:textStyle="bold"
                android:textSize="@dimen/text15sp"
                />
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:hint="Select your place">

                <AutoCompleteTextView
                    android:id="@+id/txtEventPlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size15dp"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Event Package"
                android:layout_marginTop="@dimen/size20dp"
                android:fontFamily="@font/proximanovaregular"
                android:textStyle="bold"
                android:textSize="@dimen/text15sp"
                />
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:hint="Select your package">

                <AutoCompleteTextView
                    android:id="@+id/txtEventPackage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size15dp"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Description"
                android:layout_marginTop="@dimen/size20dp"
                android:fontFamily="@font/proximanovaregular"
                android:textStyle="bold"
                android:textSize="@dimen/text15sp"
                />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:hint="Description goes here (date, etc)">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/size100dp"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="#1E88E5"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Cancel"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnCreate"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="60dp"
                android:background="#1E88E5"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="CREATE"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>