...
    <string name="show_company_location">Our Location</string>
    <string name="about_us">About Us</string>
    <string name="history">History</string>
    <string name="email">Email</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="home">Home</string>
    <string name="create_event">CREATE EVENT</string>
    <string name="what_is_filography">What is Filography?</string>
    <string name="profile">Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="mapbox_access_token">pk.eyJ1IjoicmV4aW9uMjEiLCJhIjoiY2tmb3ZrejVqMDUxajJyczlwcW5sdWUwaiJ9.iVvYK8CFEUE6C7v0IW5uXw</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
...
