...
                android:layout_alignBottom="@id/view_pager"
                android:layout_marginBottom="@dimen/size48dp"
                />
        </RelativeLayout>

        <Button
            android:id="@+id/btnCreateEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size100dp"
            android:layout_marginRight="@dimen/size100dp"
            android:text="@string/create_event"
            android:textStyle="bold"
...
